== 0.6

	New features:
	----------------------------	
	
	Enhancements:
	----------------------------
	+ Search results covering VLANs;
	+ Custom IP fields ordering;
	+ Show Subnet name instead of subnet IP address option;
	+ Strict mode option in config files that controlls overlapping checks;
	+ VLAN creation from adding/editing subnets;

	Bugfixes:
	------------------------
	+ Fixed error with missing custom IP fields when adding new IP address;
	+ Fixed checkboxes not working in various browsers;
	+ Fixed subnet description display in under subnet administration;
	+ Fixed depricated error when showing XLS files;


== 0.6

	New features:
	----------------------------
	+ Selectable IP address list display fields;
	+ Custom IP address fields;	
	+ Search and replace IP fields function;
	+ Full page width theme;	
	
	Enhancements:
	----------------------------
	+ Independant VLAN management;
	+ Added additional level of subnet nesting;
	+ Added option to clear and export log files;
	+ Export of search results to XLS;
	+ Clickable search results;
	+ Selectable export fields when exporting subnet;
	+ Subnet can be deleted from ip address edit subnet;
	+ IP Requests for locked subnets and viewer users can be placed from ip address list;
	+ jQuery updated to v 1.7.1;
	+ HighCharts updated to v 2.2.0;

	Bugfixes:
	------------------------
	+ Upgrade is supported only for versions 0.4 and higher;
	+ Fixed broken UTF-8 support;
	+ Fixed wrong logging when authenticating via AD;
	+ Fixed issues where external attacker might get information about internal hosts through resolvedns script;
	+ Fixed wrong subnet nesting under administration/manage subnets;
	+ Fixed editing subnet can be outside of its own root subnet;
	+ Fixed errors when adding new switch auto-adds itselt to all hosts without no switch defined;
	+ Fixed removing switch not removed in ip address list;
	+ Vlan1 can now be used;
	+ Fixed mail sending settings with missing information;