@@ -6,12 +6,11 @@ features for next releases:
 		- custom groups
 		- per-section permissions for groups;
 		- cron update DNS resolving;
-
-		- All IP fields sorting;
+		- Collapsed switch list;
 		
 	
 	- Requests
-		- Sorting of IP addresses;
+		- VLAN sorting;
 		- Sorting of subnets;
 		- SMTP auth;
 		- subnet splitting;
