@@ -2,6 +2,7 @@
 
 	New features:
 	----------------------------	
+	+ Sorting of IP addresses;
 	
 	Enhancements:
 	----------------------------
